sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:6: error: not found: value i
    if (!plusPetit(i,i+1)){
                   ^AlgGnomeSort:6: error: not found: value i
    if (!plusPetit(i,i+1)){
                     ^AlgGnomeSort:7: error: not found: value i
      echange(i,i+1)
              ^AlgGnomeSort:7: error: not found: value i
      echange(i,i+1)
                ^AlgGnomeSort:9: error: not found: value i
    else if (plusPetit(i,i+1)){
                       ^AlgGnomeSort:9: error: not found: value i
    else if (plusPetit(i,i+1)){
                         ^